--- a/Hackathon2020.Poc01/appsettings.json
+++ b/Hackathon2020.Poc01/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SampleModel": "Server=(localdb)\\MSSQLLocalDB;Database=SampleModel;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
