Rename default db and csdl files

--- a/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
+++ b/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="SampleModel.xml" />
+    <None Remove="ODataCsdl.xml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="SampleModel.xml">
+    <Content Include="ODataCsdl.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
