Load db connection string from file

--- a/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
+++ b/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="connectionstring.txt" />
     <None Remove="project.csdl" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="connectionstring.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Project.csdl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
