Cleaning up - remove commented code plus a little refactor

--- a/Hackathon2020.Poc01/appsettings.json
+++ b/Hackathon2020.Poc01/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SampleModel": "Server=(localdb)\\MSSQLLocalDB;Database=SampleModel;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Hackathon2020DbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=Hackathon2020Db;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
