--- a/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
+++ b/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
@@ -6,8 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\clhabins\.nuget\packages\rapidapi.aspnetcore.odata.experimental\1.0.2\contentFiles\any\netcoreapp3.1\PropertyContainer.generated.tt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="connectionstring.txt" />
-    <None Remove="project.csdl" />
+    <None Remove="Project.csdl" />
+    <None Remove="Simple.csdl" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +20,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Project.csdl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Simple.csdl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -25,8 +33,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
     <PackageReference Include="Microsoft.OData.Core" Version="7.7.2" />
     <PackageReference Include="RapidApi.AspNetCore.OData.Experimental" Version="1.0.2" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
@@ -38,12 +44,6 @@
 
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="C:\Users\clhabins\source\repos\Hackathon2020.Poc01\Microsoft.AspNet.OData.Shared\Query\Expressions\PropertyContainer.generated.cs">
-      <DesignTime>True</DesignTime>
-    </Compile>
   </ItemGroup>
 
 </Project>
