--- a/Hackathon2020.Poc01/Properties/launchSettings.json
+++ b/Hackathon2020.Poc01/Properties/launchSettings.json
@@ -23,6 +23,12 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/odata",
+      "publishAllPorts": true
     }
   }
 }
