--- a/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
+++ b/Hackathon2020.Poc01/Hackathon2020.Poc01.csproj
@@ -39,11 +39,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.OData.Core" Version="7.7.2" />
-    <PackageReference Include="RapidApi.AspNetCore.OData.Experimental" Version="1.0.3" />
+    <PackageReference Include="RapidApi.AspNetCore.OData.Experimental" Version="1.0.4" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <!-- <ProjectReference Include="..\..\WebApi\src\Microsoft.AspNetCore.OData\Microsoft.AspNetCore.OData.csproj" /> -->
     <ProjectReference Include="..\EdmObjectsGenerator\EdmObjectsGenerator.csproj" />
   </ItemGroup>
 
